--- a/app/src/main/res/layout/activate_biometrics_dialog_fragment.xml
+++ b/app/src/main/res/layout/activate_biometrics_dialog_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/attrBackgroundColorBackgroundDialog"
-        tools:context=".ui.activateBiometrics.ActivateBiometricsDialogFragment">
+        tools:context=".dialog.activateBiometrics.ActivateBiometricsDialogFragment">
 
         <TextView
             android:id="@+id/textView_title"
