--- a/app/src/main/res/layout/logout_dialog_fragment.xml
+++ b/app/src/main/res/layout/logout_dialog_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/attrBackgroundColorBackgroundDialog"
         android:padding="0dp"
-        tools:context=".ui.logout.LogoutDialogFragment">
+        tools:context=".dialog.logout.LogoutDialogFragment">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/textView_title"
