--- a/app/src/main/res/layout/fragment_multiple_attachment_preview_video.xml
+++ b/app/src/main/res/layout/fragment_multiple_attachment_preview_video.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".ui.multipreview.fragments.MultipleAttachmentPreviewVideoFragment">
 
+    <TextView
+        android:id="@+id/text_time_autodestruction"
+        style="@style/TextCountDownSelfDestruct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/normal_margin"
+        android:layout_marginEnd="@dimen/small_margin"
+        android:padding="@dimen/x_small_padding"
+        android:text="12:12"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
         android:id="@+id/image_button_play"
         android:layout_width="wrap_content"
@@ -49,15 +62,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--    <View-->
-    <!--        android:id="@+id/view_shadow"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="48dp"-->
-    <!--        android:background="@drawable/bg_gradient_options_transparent"-->
-    <!--        android:visibility="gone"-->
-    <!--        app:layout_constraintBottom_toTopOf="@id/view_video_controller"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent" />-->
+    <FrameLayout
+        android:id="@+id/frame_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/normal_margin"
+        android:layout_marginEnd="@dimen/small_margin"
+        android:background="@drawable/bg_black_transparent_circle"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="visible">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageView_status"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="@dimen/x_small_margin"
+            android:elevation="4dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_message_sent"
+            tools:visibility="visible" />
+
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
