changes in mark state read in video and solve flicker in video preview

--- a/app/src/main/res/layout/activity_multiple_attachment_preview.xml
+++ b/app/src/main/res/layout/activity_multiple_attachment_preview.xml
@@ -7,10 +7,21 @@
     android:background="@color/black"
     tools:context=".ui.multipreview.MultipleAttachmentPreviewActivity">
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager_attachments"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/bg_default_conversation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/image_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="@dimen/elevation"
         android:padding="@dimen/normal_padding"
         android:src="@drawable/ic_close_white"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/normal_margin"
+        android:elevation="@dimen/elevation"
         app:layout_constraintBottom_toBottomOf="@id/image_close"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/image_close" />
@@ -33,16 +45,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager_attachments"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:src="@drawable/bg_default_conversation"
-        app:layout_constraintBottom_toTopOf="@id/view_preview_bottom"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view_attachment_options" />
 
     <ProgressBar
         android:id="@+id/progress_loader"
