--- a/app/src/main/res/layout/fragment_multiple_attachment_preview_image.xml
+++ b/app/src/main/res/layout/fragment_multiple_attachment_preview_image.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/small_margin"
-        android:layout_marginBottom="@dimen/xx_large_margin"
+        android:layout_marginBottom="@dimen/xxx_large_margin"
         android:background="@drawable/bg_black_transparent_circle"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
