--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,7 @@
     <dimen name="large_margin">24dp</dimen>
     <dimen name="x_large_margin">32dp</dimen>
     <dimen name="xx_large_margin">64dp</dimen>
+    <dimen name="xxx_large_margin">102dp</dimen>
     <dimen name="elevation">4dp</dimen>
     <dimen name="height_editText_enter_code">70dp</dimen>
     <dimen name="text_size_editText_enter_code">24sp</dimen>
