--- a/app/src/main/res/layout/change_fakes_dialog_fragment.xml
+++ b/app/src/main/res/layout/change_fakes_dialog_fragment.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/attrBackgroundColorBackgroundDialog"
-        tools:context=".ui.muteConversation.MuteConversationDialogFragment">
+        tools:context=".dialog.muteConversation.MuteConversationDialogFragment">
 
         <TextView
             android:id="@+id/textView_title"
