changes from jk

--- a/app/src/main/res/layout/activity_multiple_attachment_preview.xml
+++ b/app/src/main/res/layout/activity_multiple_attachment_preview.xml
@@ -55,4 +55,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_attachment_options" />
 
+    <TextView
+        android:id="@+id/text_loading"
+        style="@style/TextAppearance.AppCompat.Body1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/small_margin"
+        android:gravity="center"
+        android:text="@string/multi_msg_preparing_files"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progress_loader" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
