--- a/app/src/main/res/layout/item_view_multi_attachment_msg_item.xml
+++ b/app/src/main/res/layout/item_view_multi_attachment_msg_item.xml
@@ -7,15 +7,23 @@
 
     <ImageView
         android:id="@+id/imageView_attachment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/vertical_photo" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/imageView_empty"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/gray_8B8989"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageView_icon_show"
