--- a/app/src/main/res/layout/view_multi_attachment_msg_three_files.xml
+++ b/app/src/main/res/layout/view_multi_attachment_msg_three_files.xml
@@ -3,37 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="200dp"
+    android:background="@color/black_212121">
 
     <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MultiAttachmentMsgView
         android:id="@+id/view_file_one"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_margin="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical_70_percent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:background="#345678" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MultiAttachmentMsgView
         android:id="@+id/view_file_two"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="1dp"
         app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_middle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical_70_percent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:background="#234567" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MultiAttachmentMsgView
         android:id="@+id/view_file_three"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical_70_percent"
-        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_middle"
-        tools:background="#234567" />
+        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_middle" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical_70_percent"
