--- a/app/src/main/res/layout/view_multi_attachment_msg_five_files.xml
+++ b/app/src/main/res/layout/view_multi_attachment_msg_five_files.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="200dp">
 
-    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MultiAttachmentMsgView
+    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MyMultiAttachmentMsgView
         android:id="@+id/view_file_one"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:background="#345678" />
 
-    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MultiAttachmentMsgView
+    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MyMultiAttachmentMsgView
         android:id="@+id/view_file_two"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:background="#234567" />
 
-    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MultiAttachmentMsgView
+    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MyMultiAttachmentMsgView
         android:id="@+id/view_file_three"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toTopOf="@id/guideline_horizontal_middle"
         tools:background="#345678" />
 
-    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MultiAttachmentMsgView
+    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MyMultiAttachmentMsgView
         android:id="@+id/view_file_four"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toTopOf="@id/guideline_horizontal_middle"
         tools:background="#345678" />
 
-    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MultiAttachmentMsgView
+    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MyMultiAttachmentMsgView
         android:id="@+id/view_file_five"
         android:layout_width="0dp"
         android:layout_height="0dp"
