--- a/app/src/main/res/layout/view_multi_attachment_msg_two_files.xml
+++ b/app/src/main/res/layout/view_multi_attachment_msg_two_files.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="200dp">
 
-    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MultiAttachmentMsgView
+    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MyMultiAttachmentMsgView
         android:id="@+id/view_file_one"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:background="#345678" />
 
-    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MultiAttachmentMsgView
+    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MyMultiAttachmentMsgView
         android:id="@+id/view_file_two"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
