--- a/app/src/main/res/layout/view_multi_attachment_msg_five_files.xml
+++ b/app/src/main/res/layout/view_multi_attachment_msg_five_files.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="200dp"
+    android:background="@color/black_212121">
 
     <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.item.MyMultiAttachmentMsgView
         android:id="@+id/view_file_one"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="1dp"
         app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_middle"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical_middle"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,6 +21,7 @@
         android:id="@+id/view_file_two"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="1dp"
         app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_middle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical_middle"
@@ -29,6 +32,7 @@
         android:id="@+id/view_file_three"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical_one"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +43,7 @@
         android:id="@+id/view_file_four"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical_two"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical_one"
@@ -49,6 +54,7 @@
         android:id="@+id/view_file_five"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical_two"
