fix: Light theme change

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -111,7 +111,9 @@
                 <androidx.core.widget.NestedScrollView
                     android:id="@+id/container_content_home"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="?attr/attrBackgroundColorBackground"
+                    >
 
                     <LinearLayout
                         android:layout_width="match_parent"
