--- a/app/src/main/res/layout/view_receiver_multi_attachment_msg_one_files.xml
+++ b/app/src/main/res/layout/view_receiver_multi_attachment_msg_one_files.xml
@@ -6,7 +6,7 @@
     android:layout_height="200dp"
     android:background="@color/black_212121">
 
-    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.view.sender.MyMultiAttachmentMsgView
+    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.view.receiver.ReceiverMultiAttachmentMsgView
         android:id="@+id/view_file_one"
         android:layout_width="0dp"
         android:layout_height="0dp"
