--- a/app/src/main/res/layout/item_view_multi_attachment_msg_item_receiver.xml
+++ b/app/src/main/res/layout/item_view_multi_attachment_msg_item_receiver.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.view.sender.ViewAttachmentStatusSenderCollage
+    <com.naposystems.napoleonchat.ui.conversation.adapter.viewholder.multi.view.receiver.ViewAttachmentStatusReceiverCollage
         android:id="@+id/view_attachment_status"
         android:layout_width="0dp"
         android:layout_height="0dp"
